--- a/src/main/resources/templates/theme/default/blog.html
+++ b/src/main/resources/templates/theme/default/blog.html
@@ -89,8 +89,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
         <div class="ui attached positive message" th:if="${blog.meta.shareStatement}">
             <!--博客信息-->
             <div class="ui middle aligned grid">
@@ -106,7 +106,7 @@
                     </ui>
                 </div>
                 <div class="five wide column">
-                    <img src="../../../static/default/images/wechat.jpg" th:src="@{/images/wechat.jpg}" alt=""
+                    <img src="../../../static/default/images/wechat.jpg" th:src="@{/default/images/wechat.jpg}" alt=""
                          class="ui right floated rounded bordered image" style="width: 110px">
                 </div>
             </div>
@@ -133,7 +133,8 @@
                                           th:if="${comment.adminComment}==1">访客</span>
                                     <span class="ui mini basic touristComment left pointing label m-padded-mini"
                                           th:if="${comment.adminComment}==0">游客</span>
-                                    <!--<span class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">博主</span>-->
+                                    <span class="ui small basic githubComment left pointing label m-padded-mini"
+                                          th:if="${comment.adminComment}==3">gayhub</span>
                                 </a>
                                 <div class="metadata">
                                     <span class="date"
@@ -148,6 +149,7 @@
                                        onclick="reply(this)">回复</a>
                                 </div>
                             </div>
+
                             <div class="comments" th:if="${#arrays.length(comment.replyComments)}>0">
                                 <div class="comment" th:each="reply : ${comment.replyComments}">
                                     <a class="avatar">
@@ -164,6 +166,9 @@
                                                   th:if="${reply.adminComment}==1">访客</span>
                                             <span class="ui mini basic touristComment left pointing label m-padded-mini"
                                                   th:if="${reply.adminComment}==0">游客</span>
+                                            <span class="ui small basic githubComment left pointing label m-padded-mini"
+                                                  th:if="${reply.adminComment}==3">gayhub</span>
+
                                             &nbsp;<span th:text="|@ ${reply.parentComment.nickname}|" class="m-teal">@ 小白</span>
                                         </a>
                                         <div class="metadata">
