--- a/src/main/resources/templates/theme/default/blog.html
+++ b/src/main/resources/templates/theme/default/blog.html
@@ -25,7 +25,7 @@
             <div class="ui horizontal link list">
                 <div class="item">
                     <!--            <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}"  alt="" class="ui avatar image">-->
-                    <img src="https://unsplash.it/100/100?image=1005" th:src="${webSiteConfig.getAuthor()}" alt=""
+                    <img src="https://unsplash.it/100/100?image=1005" th:src="${webSiteConfig.getAuthorAvatar()}" alt=""
                          class="ui avatar image">
                     <div class="content"><a href="#" class="header"
                                             th:text="${webSiteConfig.getAuthor()}">wulilinghan</a></div>
@@ -97,8 +97,8 @@
                 <div class="eleven wide column">
                     <ui class="list">
                         <li>作者：<span th:text="${webSiteConfig.getAuthor()}">wulilinghan</span><a href="#"
-                                                                                                  th:href="@{/about}"
-                                                                                                  target="_blank">（联系作者）</a>
+                                                                                                 th:href="@{/about}"
+                                                                                                 target="_blank">（联系作者）</a>
                         </li>
                         <li>发表时间：<span th:text="${#dates.format(blog.meta.creationTime,'yyyy-MM-dd HH:mm')}">2017-10-02 09:08</span>
                         </li>
@@ -120,7 +120,7 @@
                         <h3 class="ui dividing header">评论</h3>
                         <div class="comment" th:each="comment : ${comments}">
                             <a class="avatar">
-<!--                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">-->
+                                <!--                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">-->
                                 <img src="/default/images/avatar.png" alt=""/>
                             </a>
                             <div class="content">
@@ -153,8 +153,8 @@
                             <div class="comments" th:if="${#arrays.length(comment.replyComments)}>0">
                                 <div class="comment" th:each="reply : ${comment.replyComments}">
                                     <a class="avatar">
-<!--                                        <img src="https://unsplash.it/100/100?image=1005" th:src="@{${reply.avatar}}">-->
-                                        <img src="default/images/avatar.png" alt=""/>
+                                        <!--                                        <img src="https://unsplash.it/100/100?image=1005" th:src="@{${reply.avatar}}">-->
+                                        <img src="/default/images/avatar.png" alt=""/>
                                     </a>
                                     <div class="content">
                                         <a class="author">
@@ -200,11 +200,11 @@
 
                 <div class="fields">
                     <!--表情按钮-->
-<!--                    <div class="field  m-margin-bottom-small m-mobile-wide" data-tooltip="表情未加载完全或点击无响应可刷新页面重试">
-                        <button id="emojiBtn" type="button" class="ui yellow button m-mobile-wide"><i
-                                class="large smile outline icon"></i>表情
-                        </button>
-                    </div>-->
+                    <!--                    <div class="field  m-margin-bottom-small m-mobile-wide" data-tooltip="表情未加载完全或点击无响应可刷新页面重试">
+                                            <button id="emojiBtn" type="button" class="ui yellow button m-mobile-wide"><i
+                                                    class="large smile outline icon"></i>表情
+                                            </button>
+                                        </div>-->
 
                     <div class="field m-mobile-wide m-margin-bottom-small">
                         <div class="ui left icon input">
@@ -295,26 +295,26 @@
 
 <script th:inline="javascript">
     /*加载emoji表情*/
-/*
-    onload = function () {
-        $("#commentEditor").emoji({
-            button: "#emojiBtn",  //评论表情
-            showTab: false,
-            animation: 'slide',
-            basePath: '/default/images/emoji',
-            icons: emojiLists
-        });
+    /*
+        onload = function () {
+            $("#commentEditor").emoji({
+                button: "#emojiBtn",  //评论表情
+                showTab: false,
+                animation: 'slide',
+                basePath: '/default/images/emoji',
+                icons: emojiLists
+            });
 
-        $("#commentText").emojiParse({
-            basePath: '/default/images/emoji',
-            icons: emojiLists
-        });
+            $("#commentText").emojiParse({
+                basePath: '/default/images/emoji',
+                icons: emojiLists
+            });
 
-        localStorage.setItem("blogFirstPicture", document.getElementById("firstPicture").value);
-        localStorage.setItem("blogTitle", document.getElementById("blogTitle").value);
-        localStorage.setItem("blogId", document.getElementById("blogId").value);
-    };
-*/
+            localStorage.setItem("blogFirstPicture", document.getElementById("firstPicture").value);
+            localStorage.setItem("blogTitle", document.getElementById("blogTitle").value);
+            localStorage.setItem("blogId", document.getElementById("blogId").value);
+        };
+    */
 
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
@@ -430,20 +430,20 @@
 
     });
 
-/*    function postData() {
-        $("#comment-container").load("/POSTComments", {
-            "parentComment.id": $("[name='parentComment.id']").val(),
-            "blog.id": $("[name='blog.id']").val(),
-            "nickname": $("[name='nickname']").val(),
-            "email": $("[name='email']").val(),
-            //"content" : $("[name='content']").val()
-            "content": document.getElementById("commentEditor").innerHTML
-        }, function (responseTxt, statusTxt, xhr) {
-//        $(window).scrollTo($('#comment-container'),500);
-            clearContent();
-            $("#comment-container").load("/refreshComments");//刷新数据
-        });
-    }*/
+    /*    function postData() {
+            $("#comment-container").load("/POSTComments", {
+                "parentComment.id": $("[name='parentComment.id']").val(),
+                "blog.id": $("[name='blog.id']").val(),
+                "nickname": $("[name='nickname']").val(),
+                "email": $("[name='email']").val(),
+                //"content" : $("[name='content']").val()
+                "content": document.getElementById("commentEditor").innerHTML
+            }, function (responseTxt, statusTxt, xhr) {
+    //        $(window).scrollTo($('#comment-container'),500);
+                clearContent();
+                $("#comment-container").load("/refreshComments");//刷新数据
+            });
+        }*/
 
     function postData() {
         $.ajax({
@@ -468,8 +468,8 @@
                 console.log(JSON.stringify(request.responseJSON.message));
             },
             success: function (data) {
+                // $("#comment-container").load("/refreshComments/" + $("[name='blog.id']").val());//刷新数据
                 clearContent();
-                $("#comment-container").load("/refreshComments");//刷新数据
             }
         });
     }
