--- a/src/main/resources/templates/theme/default/error/404.html
+++ b/src/main/resources/templates/theme/default/error/404.html
@@ -23,6 +23,7 @@
       <div class="ui contianer">
         <h2>404</h2>
         <p>对不起，你访问的资源不存在</p>
+        <p th:text="|Message: ${message}|"></p>
       </div>
     </div>
   </div>
